refactor: change start block to a start element id
Step 1 of making the context unaware of the existance of block builders. Block builders are a very specific object. To know where we want to start the process all we need is an element id.